--- a/.wksctlignore
+++ b/.wksctlignore
@@ -1,6 +1,8 @@
 # This file is auto-genearted by gitops-profile tool.
 # Filename: .wksctlignore
 
-covid-ml-profile.yaml
+gitops-profile.yaml
+.eksctlignore
+.wksctlignore
 eks/
 components/
